--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=wfW9O19LLergt4vRekWI55GYeU2dD4FT
 
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_DATABASE=bsg_db
 DB_USERNAME=root
 DB_PASSWORD=
@@ -11,7 +11,7 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=localhost
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
