--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_KEY=wfW9O19LLergt4vRekWI55GYeU2dD4FT
 DB_HOST=localhost
 DB_DATABASE=bsg_db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=.bsg2000
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
