--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 /vendor
 /node_modules
-/public/storage
-Homestead.yaml
-Homestead.json
-.env
 .idea/
 .idea
 _ide_helper.php
+.env
+public/document/pdf/chi/for web/
