--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,9 @@
 
     RewriteEngine On
 
+    RewriteCond %{HTTP_HOST} ^bjsthkgroup.com [NC]
+        RewriteRule ^(.*)$ http://www.bjsthkgroup.com/$1 [L,R=301]
+
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
@@ -18,6 +21,6 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    RewriteCond %{HTTP_HOST} ^bjsthkgroup.com [NC]
-    RewriteRule ^(.*)$ http://www.bjsthkgroup.com/$1 [L,R=301]
+    #RewriteCond %{HTTP_HOST} ^bjsthkgroup.com [NC]
+    #RewriteRule ^(.*)$ http://www.bjsthkgroup.com/$1 [L,R=301]
 </IfModule>
