--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,8 +5,9 @@
 
     RewriteEngine On
 
-    RewriteCond %{HTTP_HOST} ^bjsthkgroup.com [NC]
-        RewriteRule ^(.*)$ http://www.bjsthkgroup.com/$1 [L,R=301]
+    RewriteCond %{HTTP_HOST} !localhost
+    RewriteCond %{HTTP_HOST} !^(.+)\.(.+)\.(.+)
+    RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [L,R=301]
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
@@ -21,6 +22,4 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    #RewriteCond %{HTTP_HOST} ^bjsthkgroup.com [NC]
-    #RewriteRule ^(.*)$ http://www.bjsthkgroup.com/$1 [L,R=301]
 </IfModule>
