--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "classmap": [
             "database"
         ],
+        "files": [
+            "app/Helpers/Helperfunc.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         }
